fix: ScrollBar

--- a/styles/global.css
+++ b/styles/global.css
@@ -186,12 +186,12 @@ td.action {
 .table-content {
   display: flex;
   flex-direction: column;
-  overflow-y: overlay;
+  overflow: overlay;
   max-height: 59rem;
 }
 
 .table-content::-webkit-scrollbar {
-  width: 0.6rem;
+  width: 2.2rem;
 }
 
 .table-content::-webkit-scrollbar-track {
@@ -200,6 +200,9 @@ td.action {
 }
 
 .table-content::-webkit-scrollbar-thumb {
-  background: #4a808c;
-  border-radius: 0.3rem;
+  width: 6px;
+  background-color: transparent;
+  border-radius: 8rem;
+  box-shadow: inset 0 0 0px 6px #4a808c;
+  border: solid 8px transparent;
 }
